# rapla

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Procfile  README.md  flake.nix  fly.toml  go.mod  go.sum  result  treefmt.toml
.github/: dependabot.yml
.github/workflows/: build-push.yml  build.yml  checks.yml  docker.yml  fly.yml  lint.yml
cmd/rapla-proxy/: main.go
internal/server/: server.go
pkg/rapla/: rapla.go
rapla-parser/: Cargo.toml
rapla-parser/src/: ics.rs  lib.rs  parser.rs  structs.rs
rapla-proxy/: Cargo.toml
rapla-proxy/src/: main.rs
src/: cache.rs  cli.rs  event.rs  ics.rs  lib.rs  main.rs  page.rs  parser.rs  proxy.rs  rapla.rs  scraper.rs  server.rs  structs.rs  utils.rs
