[package]
name = "rapla"
version = "0.3.0"
edition = "2021"

[dependencies]

# core dependencies
scraper = { version = "0.17.1", default-features = false }
once_cell = "1.18.0"
chrono = { version = "0.4.30", features = [
    "std",
    "clock",
    "serde",
], default-features = false }
serde = { version = "1.0.189", features = ["derive"] }

# ics feature
ics = { version = "0.5.8", optional = true }

# server feature
tokio = { version = "1.32.0", features = [
    "macros",
    "rt-multi-thread",
], optional = true }
hyper = { version = "0.14.27", features = ["h2", "server"], optional = true }
reqwest = { version = "0.11.20", features = [
    "rustls-tls",
    "trust-dns",
], default-features = false, optional = true }
form_urlencoded = { version = "1.2.0", optional = true }
serde_json = { version = "1.0.107", optional = true }

[features]
ics = ["dep:ics"]
proxy = [
    "ics",
    "dep:tokio",
    "dep:hyper",
    "dep:reqwest",
    "dep:form_urlencoded",
    "dep:serde_json",
]
default = ["proxy"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "rapla-proxy"
path = "src/proxy.rs"
