[workspace]
members = ["rapla-proxy", "rapla-parser"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
chrono = { version = "0.4.35", default-features = false, features = ["std"] }
serde = { version = "1.0.197", features = ["derive"] }

[profile.release]
opt-level = 3
