[package]
name = "rapla-ical-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4", default-features = false, features = ["tokio", "http1", "http2", "query"] }
chrono = { version = "0.4.35", default-features = false, features = ["std", "now"] }
getopts = "0.2.21"
ics = "0.5.8"
once_cell = "1.19.0"
reqwest = { version = "0.12.3", default-features = false, features = ["rustls-tls-native-roots", "charset"] }
scraper = { version = "0.19.0", default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "signal"] }

[profile.release]
opt-level = 3
lto = true
