[package]
name = "rapla-parser"
version.workspace = true
edition.workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
ics = { version = "0.5.8", optional = true }
once_cell = "1.19.0"
scraper = { version = "0.19.0", default-features = false }
serde = { workspace = true, optional = true }

[features]
ics = ["dep:ics"]
serde = ["dep:serde"]
default = ["ics", "serde"]
