[package]
name = "rapla-proxy"
version.workspace = true
edition.workspace = true

[dependencies]
chrono = { workspace = true, features = ["now"] }
form_urlencoded = "1.2.1"
hyper = { version = "0.14.27", features = ["server", "h2"] }
rapla-parser = { path = "../rapla-parser", features = ["ics"] }
reqwest = { version = "0.11.26", default-features = false, features = [
    "rustls-tls",
    "trust-dns",
] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
